# gfx

./: .gitattributes
drm/: Makefile  drm.c
matmul/: .gitignore  ansi_codes.h  bench.h  benchmark.cc  compiler.h  interrupt.cc  interrupt.h  mat.h  matmul.cc  matmul.cl  matmul_cpu_naive.cc  matmul_cuda.cc  matmul_cuda.cu  matmul_cuda.h  matmul_opencl.cc  matview.h  meson.build  meson.options  opencl.cc  opencl.h  options.h  panic.h  print_utils.h  random.cc  random.h  threading.cc  threading.h  timing.h  types.h
matmul/srcgen/: gen_get_type_str
matmul/tests/: gen-safetensors.py  test.cc  test.h  test_against_pytorch.cc  threading_test.cc
matmul/tests/files/: classify-moons.safetensors  grad.safetensors  pytorch1.safetensors  pytorch_1024x1024.safetensors  pytorch_1024x1024_f32.safetensors  pytorch_2048x2048.safetensors  pytorch_2048x2048_f32.safetensors  pytorch_4x4.safetensors  pytorch_4x4_f32.safetensors  pytorch_512x512.safetensors  pytorch_512x512_f32.safetensors  pytorch_64x64.safetensors  pytorch_64x64_f32.safetensors
matmul/tests/tools/: gen-classify-moons.py  gen-classify.py  gen-safetensors.py  torch-gen-grad-safetensors.py  torch-gen-safetensors.py  torch_gen_safetensors.py
nn/makemore/: makemore.ipynb
opencl_mandelbrot/: compiler.h  configure  mandelbrot.cc  mandelbrot.cl  meson.build  meson.options  panic.h  render.cc  render_cpu.cc  render_opencl.cc  timing.h  types.h
opencl_square/: .gitignore  Makefile  bruteforce.c  bruteforce.cl  square.c
opencl_square/scripts/docker/: Dockerfile
opengl/cube/: Makefile  cube  cube.cc  vshader.glsl
opengl/triangle/: .gitignore  Makefile  fshader.glsl  triangle.cc  vshader.glsl
sorting/: .gitignore  Makefile  sortbench.cc  types.h
vulkan/: .gitignore  Makefile  square.comp  vkexplore  vkexplore.cc
vulkan2/: .gitignore  Makefile  shader.vert  vkexplore.cc
xcbtest/: .gitignore  Makefile  xcbtest.c
